fix swagger property
